--- a/index.html
+++ b/index.html
@@ -5,10 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo Vue</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="app"></div>
+    <h1><span>Vue</span> your Taske</h1>
+    <div id="app">
+        <template v-for="todo in toDoItems">
+            <div :class="[todo.done == true ? 'doneTrue' : 'doneFalse']">
+                <div class="text">
+                    {{todo.text}}
+                </div>
+                <div v-if="todo.done == true" >
+                    <i class="bi bi-check-square-fill"></i>
+                </div>
+                <div v-else>
+                    <i class="bi bi-square-fill"></i>
+                </div>
+            </div>
+        </template>
+    </div>
     <script src='https://unpkg.com/vue@3/dist/vue.global.js'></script>
     <script src="main.js"></script>
 </body>
