add @keydown.enter for add an object

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h1><span>Vue</span> your Taske</h1>
     <div id="app">
         <div id="divInput">
-            <input v-model="newItem">
-            <button @click="addItem(newItem)">Aggiungi</button>
+            <input v-model="newItem" @keydown.enter="aggItem(newItem)">
+            <button @click="aggItem(newItem)">Aggiungi</button>
         </div>
         <template v-for="(todo, index) in toDoItems">
             <div :class="[todo.done == true ? 'doneTrue' : 'doneFalse']">
